--- a/experiments/vschallenge/seg_hrnet_w48_cls17_520x520_sgd_lr4e-3_wd1e-4_bs_16_epoch200.yaml
+++ b/experiments/vschallenge/seg_hrnet_w48_cls17_520x520_sgd_lr4e-3_wd1e-4_bs_16_epoch200.yaml
@@ -2,7 +2,7 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (0, 1, 2, 3)
+GPUS: (0, )
 OUTPUT_DIR: '/home/data2/miles/HRNet_Parsing/output'
 LOG_DIR: '/home/data2/miles/HRNet_Parsing/log'
 WORKERS: 6
