--- a/experiments/vschallenge/seg_hrnet_w48_cls17_520x520_sgd_lr7e-3_wd5e-4_OCR.yaml
+++ b/experiments/vschallenge/seg_hrnet_w48_cls17_520x520_sgd_lr7e-3_wd5e-4_OCR.yaml
@@ -2,23 +2,22 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (0,1,2,3)
-#OUTPUT_DIR: '/home/data2/zhy/HRnet_face_parsing/tools/output'
-#LOG_DIR: '/home/data2/zhy/HRnet_face_parsing/tools/log'
-OUTPUT_DIR: 'output'
-LOG_DIR: 'log'
-WORKERS: 4
-PRINT_FREQ: 100
+GPUS: (0, 1, 2, 3)
+OUTPUT_DIR: '/home/data2/miles/HRNet_Parsing/output'
+LOG_DIR: '/home/data2/miles/HRNet_Parsing/log'
+WORKERS: 6
+PRINT_FREQ: 10
 
 DATASET:
   DATASET: vschallenge
   ROOT: '/home/data2/DATASET/vschallenge'
-  TEST_SET: 'test'
+  TEST_SET: 'val'
   TRAIN_SET: 'train'
   NUM_CLASSES: 17
 MODEL:
-  NAME: seg_hrnet
-  PRETRAINED: 'pretrained_models/hrnetv2_w48_imagenet_pretrained.pth'
+  NAME: seg_hrnet_ocr
+  NUM_OUTPUTS: 2
+  PRETRAINED: '/home/data2/miles/HRNet_Parsing/pretrained_models/hrnetv2_w48_imagenet_pretrained.pth'
   EXTRA:
     FINAL_CONV_KERNEL: 1
     STAGE1:
@@ -70,34 +69,35 @@ MODEL:
       - 384
       FUSE_METHOD: SUM
 LOSS:
-  USE_OHEM: false
+  USE_OHEM: true
   OHEMTHRES: 0.9
   OHEMKEEP: 131072
+  BALANCE_WEIGHTS: [0.4, 1]
 TRAIN:
   IMAGE_SIZE:
-  - 480
-  - 480
+  - 520
+  - 520
   BASE_SIZE: 520
   BATCH_SIZE_PER_GPU: 4
   SHUFFLE: true
   BEGIN_EPOCH: 0
-  END_EPOCH: 200
+  END_EPOCH: 400
   RESUME: true
   OPTIMIZER: sgd
-  LR: 0.004
-  WD: 0.0001
+  LR: 0.007
+  WD: 0.0005
   MOMENTUM: 0.9
   NESTEROV: false
   FLIP: true
   MULTI_SCALE: true
   DOWNSAMPLERATE: 1
   IGNORE_LABEL: -1
-  SCALE_FACTOR: 16
+  SCALE_FACTOR: 11
 TEST:
   IMAGE_SIZE:
-  - 480
-  - 480
+  - 520
+  - 520
   BASE_SIZE: 520
-  BATCH_SIZE_PER_GPU: 4
+  BATCH_SIZE_PER_GPU: 16
   FLIP_TEST: false
   MULTI_SCALE: false
