--- a/experiments/vspartial/seg_hrnet_w48_cls17_520x520_sgd_lr4e-3_wd1e-4_partial.yaml
+++ b/experiments/vspartial/seg_hrnet_w48_cls17_520x520_sgd_lr4e-3_wd1e-4_partial.yaml
@@ -2,21 +2,21 @@ CUDNN:
   BENCHMARK: true
   DETERMINISTIC: false
   ENABLED: true
-GPUS: (0, )
+GPUS: (0, 1, 2, 3)
 OUTPUT_DIR: '/home/data2/miles/HRNet_Parsing/output'
 LOG_DIR: '/home/data2/miles/HRNet_Parsing/log'
-WORKERS: 6
-PRINT_FREQ: 100
+WORKERS: 10
+PRINT_FREQ: 20
 
 DATASET:
-  DATASET: vschallenge
+  DATASET: vspartial
   ROOT: '/home/data2/DATASET/vschallenge'
   TEST_SET: 'val'
   TRAIN_SET: 'train'
   NUM_CLASSES: 17
 MODEL:
   NAME: seg_hrnet
-  PRETRAINED: 'pretrained_models/hrnetv2_w48_imagenet_pretrained.pth'
+  PRETRAINED: '/home/data2/miles/HRNet_Parsing/pretrained_models/best_7454.pth'
   EXTRA:
     FINAL_CONV_KERNEL: 1
     STAGE1:
@@ -73,29 +73,29 @@ LOSS:
   OHEMKEEP: 131072
 TRAIN:
   IMAGE_SIZE:
-  - 520
-  - 520
-  BASE_SIZE: 520
-  BATCH_SIZE_PER_GPU: 6
+  - 100
+  - 100
+  BASE_SIZE: 100
+  BATCH_SIZE_PER_GPU: 120
   SHUFFLE: true
   BEGIN_EPOCH: 0
   END_EPOCH: 400
   RESUME: true
   OPTIMIZER: sgd
-  LR: 0.004
-  WD: 0.0001
+  LR: 0.0001
+  WD: 0.00001
   MOMENTUM: 0.9
   NESTEROV: false
   FLIP: true
   MULTI_SCALE: true
   DOWNSAMPLERATE: 1
   IGNORE_LABEL: -1
-  SCALE_FACTOR: 16
+  SCALE_FACTOR: 20
 TEST:
   IMAGE_SIZE:
-  - 520
-  - 520
-  BASE_SIZE: 520
-  BATCH_SIZE_PER_GPU: 16
+  - 100
+  - 100
+  BASE_SIZE: 100
+  BATCH_SIZE_PER_GPU: 120
   FLIP_TEST: false
   MULTI_SCALE: false
